--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "expo": "~41.0.1",
+    "expo-app-loading": "^1.0.3",
     "expo-status-bar": "~1.0.4",
+    "qs": "^6.10.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-animate-loading-button": "^1.0.3",
+    "react-native-button-spinner": "^0.1.4",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
