--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
+    "expo-linear-gradient": "^9.1.0",
     "expo-status-bar": "~1.0.4",
     "qs": "^6.10.1",
     "react": "16.13.1",
