[chore] add-alert

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-linear-gradient": "^9.1.0",
+    "expo-permissions": "~12.0.1",
+    "expo-server-sdk": "^3.6.0",
     "expo-status-bar": "~1.0.4",
+    "ngrok": "^4.0.1",
     "qs": "^6.10.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
