--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-animate-loading-button": "^1.0.3",
     "react-native-button-spinner": "^0.1.4",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
